--- a/Views/Todo/Index.cshtml
+++ b/Views/Todo/Index.cshtml
@@ -3,15 +3,21 @@
     ViewBag.Title = "Index";
 }
 
-<h2 class="center"> My Todos</h2>
+<h2> My Todos</h2>
+<div class="form-group">
+    @Html.ActionLink("Create a new Todo", "Create", null, 
+    new {@class = "btn btn-primary"}
+    )
+</div>
 
 <table class="table">
     <thead>
         <tr>
-            <th>ID </th>
-            <th>Description</th>
-            <th>DueDate</th>
-            <th>Actions</th>
+            <th scope="col">ID </th>
+            <th scope="col">Description</th>
+            <th scope="col">DueDate</th>
+            <th scope="col">Category</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -19,12 +25,14 @@
         {
             <tr>
                 <td>@todo.Id </td>
-                <td>@todo.Descripition</td>
+                <td>@todo.Description</td>
                 <td>@todo.DueDate.ToString("MMM-dd-yyyy")</td>
+                <td>@todo.Category.Description</td>
                 <td>
-                    <a href="#" class="btn btn-primary">Details</a>
-                    <a href="#" class="btn btn-success">Edit</a>
-                    <a href="#" class="btn btn-danger">Delete</a>
+                    @Html.ActionLink("See Details", "Details", new { id = todo.Id }, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Edit Todo", "Edit", new { id = todo.Id }, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Delete this", "Delete", new { id = todo.Id }, 
+                        new { @class = "btn btn-danger", onClick = "return confirm ('Are you sure ?')" })
                 </td>
             </tr>
         }
