--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("My Todo", "Index","Todo")</li>
-                    <li>@Html.ActionLink("My Category","Index","Category")</li>
+                    <li>@Html.ActionLink("My Todos", "Index","Todo")</li>
+                    <li>@Html.ActionLink("My Categories","Index","Category")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
