--- a/Views/Todo/Edit.cshtml
+++ b/Views/Todo/Edit.cshtml
@@ -7,6 +7,7 @@
 @using (Html.BeginForm("Edit", "Todo", FormMethod.Post))
 {
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    //Edit trả về có ID
     @Html.HiddenFor(m => m.Todo.Id)
 <div class="form-group">
     <label>Description: </label>
@@ -28,7 +29,7 @@
        )
 </div>
 <div class="form-group">
-    <button type="submit" class="btn btn-primary">Edit Todo</button>
+    <button type="submit" class="btn btn-primary">Update Todo</button>
 </div>
 }
 
