--- a/Views/Category/Create.cshtml
+++ b/Views/Category/Create.cshtml
@@ -10,7 +10,7 @@
     <div class="form-group">
         <label>Description: </label>
         @Html.TextBoxFor(m => m.Description, "", new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Description, "Please enter Todo description!",
+        @Html.ValidationMessageFor(m => m.Description, "",
             new { @class = "text-danger" })
     </div>
     <div class="form-group">
