--- a/Views/Category/Edit.cshtml
+++ b/Views/Category/Edit.cshtml
@@ -7,13 +7,13 @@
 @using (Html.BeginForm("Edit", "Category", FormMethod.Post))
 {
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<div class="form-group">
+    <label>Description: </label>
+    @Html.TextBoxFor(m => m.Description, new { @class = "form-control" })
+    @Html.ValidationMessageFor(m => m.Description, "",
+       new { @class = "text-danger" })
+</div>
     <div class="form-group">
-        <label>Description: </label>
-        @Html.TextBoxFor(m => m.Description, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Description, "Please enter Todo description!",
-           new { @class = "text-danger" })
-    </div>
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary">Edit Todo</button>
+        <button type="submit" class="btn btn-primary">Update Category</button>
     </div>
 }
