--- a/Views/Todo/Edit.cshtml
+++ b/Views/Todo/Edit.cshtml
@@ -12,13 +12,13 @@
 <div class="form-group">
     <label>Description: </label>
     @Html.TextBoxFor(m => m.Todo.Description, new { @class = "form-control" })
-    @Html.ValidationMessageFor(m => m.Todo.Description, "Please enter Todo description!",
+    @Html.ValidationMessageFor(m => m.Todo.Description, "",
        new { @class = "text-danger" })
 </div>
 <div class="form-group">
     <label>Due Date: </label>
     @Html.TextBoxFor(m => m.Todo.DueDate, new { @class = "form-control", type = "date" })
-    @Html.ValidationMessageFor(m => m.Todo.DueDate, "Please enter Todo Due Date!",
+    @Html.ValidationMessageFor(m => m.Todo.DueDate, "",
         new { @class = "text-danger" })
 </div>
 <div class="form-group">
