Team Controller (add team, assign user, remove user, create team)

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,25 +15,24 @@
         {
             <div class="col-md-4">
                 <h2> User Functionability</h2>
-                <p>
-                    For Users
-                </p>
+                <p>@Html.ActionLink("My Todos", "Index", "Todo", null, new { @class = "btn btn-primary" })</p>
+
             </div>
         }
-        else if(User.IsInRole(GCD0806.Utils.Role.Manager))
-            {
-                <div class="col-md-4">
-                    <h2> Manager Functionability</h2>
-                    <p>@Html.ActionLink("Show All Teams", "Index", "Team", null, new {@class ="btn btn-primary"})</p>
-                </div>
-            }
+        else if (User.IsInRole(GCD0806.Utils.Role.Manager))
+        {
+            <div class="col-md-4">
+                <h2> Manager Functionability</h2>
+                <p>@Html.ActionLink("All Teams", "Index", "Team", null, new { @class = "btn btn-primary" })</p>
+            </div>
+        }
 
         else if (User.IsInRole(GCD0806.Utils.Role.Admin))
         {
             <div class="col-md-4">
                 <h2> Admin Functionability</h2>
                 <p>
-                    @Html.ActionLink("Create new Manager Acount","CreateManager","Admin",null, new {@class ="btn btn-primary"})
+                    @Html.ActionLink("Create new Manager Acount", "CreateManager", "Admin", null, new { @class = "btn btn-primary" })
                 </p>
             </div>
         }
