--- a/Views/Team/RemoveUser.cshtml
+++ b/Views/Team/RemoveUser.cshtml
@@ -6,19 +6,21 @@
 <h2>Remove User</h2>
 @using (Html.BeginForm("RemoveUser", "Team", FormMethod.Post))
 {
-    @Html.ValidationSummary(true, "", new { @class ="text-danger"})
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         <label>Teams</label>
         @Html.DropDownListFor(m => m.TeamId,
-       new SelectList(Model.Teams,"Id","Name"),
-       new {@class ="form-control"})
+       new SelectList(Model.Teams, "Id", "Name"),
+       new { @class = "form-control" })
     </div>
     <div class="form-group">
         <label>User</label>
         @Html.DropDownListFor(m => m.UserId,
-       new SelectList(Model.Users,"Id","Email"),
-       new {@class ="form-control"})
+       new SelectList(Model.Users, "Id", "Email"),
+       new { @class = "form-control" })
+        @Html.ValidationMessage("Error", new { @class = "text-danger" })
     </div>
     <button type="submit" class="btn btn-primary">Delete User</button>
+    @Html.ActionLink("Return", "Index", null, new { @class = "btn btn-primary" })
 }
 
